test/e2e/testdata/tlsroute-tls-termination.yaml
# Certificate for TLS termination - Wildcard cert for *.example.com
# openssl req -x509 -sha256 -nodes -days 3650 -newkey rsa:2048 -subj '/O=example Inc./CN=*.example.com' -keyout tls.key -out tls.crt
apiVersion: v1
data:
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRG5zbHN5Q21VQmxmMTgKT0htNkNKRkdYeGNMWkF2TGhyWkdZK0NGTFpwTW5IaVhDTTRYLzB4V0ViS2d3TGJTd3c4RURISXZlVElSajNvQQpta2l0d2t2UUZiUkZSUnlDSlNjOXNMb1MzY2hPcEp5TlUxdEYrenYraHAvQlR6L0VGMHBqMUZJdDBYc0g3UlZIClRaaDBnUzdlYm53T3RhNU51WEFuYmFCakhxdVJmQVZPUWcrZDNCSU9kZXhzZkJvNFN5TEc4VHRsYis4bXVOY24KTll6UFVtQW01NkE4SmNsblVxc2U3aTVDWXdZeWlRZnJCNk5NS043c1YwR2p6enE0RHB5WHMxZWoxZmpGQmpKUwpxVlAzTm5FcEoyaWFsb [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXakNDQWtLZ0F3SUJBZ0lVSk9taGNTTHR6LzVRU2tvcitaOFpvOWVocnlNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJZd0ZBWURWUVFEREEwcUxtVjRZVzF3YkdVdQpZMjl0TUI0WERUSTFNVEl3TlRBNE1EWXdNMW9YRFRNMU1USXdNekE0TURZd00xb3dMekVWTUJNR0ExVUVDZ3dNClpYaGhiWEJzWlNCSmJtTXVNUll3RkFZRFZRUUREQTBxTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTU3SmJNZ3BsQVpYOWZEaDV1Z2lSUmw4WEMyUUx5NGEyUm1QZwpoUzJhVEp4NGx3ak9GL [...]
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXakNDQWtLZ0F3SUJBZ0lVSk9taGNTTHR6LzVRU2tvcitaOFpvOWVocnlNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJZd0ZBWURWUVFEREEwcUxtVjRZVzF3YkdVdQpZMjl0TUI0WERUSTFNVEl3TlRBNE1EWXdNMW9YRFRNMU1USXdNekE0TURZd00xb3dMekVWTUJNR0ExVUVDZ3dNClpYaGhiWEJzWlNCSmJtTXVNUll3RkFZRFZRUUREQTBxTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTU3SmJNZ3BsQVpYOWZEaDV1Z2lSUmw4WEMyUUx5NGEyUm1QZwpoUzJhVEp4NGx3ak9GLz [...]
kind: Secret
metadata:
  name: tls-termination-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
# Gateway with TLS listener in Terminate mode
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tlsroute-termination-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tls
      protocol: TLS
      port: 8443
      hostname: "*.example.com"
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-termination-certificate
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: All
---
# TLSRoute 1: foo.example.com -> infra-backend-v1
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute-terminate-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tlsroute-termination-gateway
      sectionName: tls
  hostnames:
    - "foo.example.com"
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
# TLSRoute 2: bar.example.com -> infra-backend-v2
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute-terminate-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tlsroute-termination-gateway
      sectionName: tls
  hostnames:
    - "bar.example.com"
  rules:
    - backendRefs:
        - name: infra-backend-v2
          port: 8080
---
# TLSRoute 3: baz.example.com -> infra-backend-v3
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute-terminate-3
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tlsroute-termination-gateway
      sectionName: tls
  hostnames:
    - "baz.example.com"
  rules:
    - backendRefs:
        - name: infra-backend-v3
          port: 8080
